Revert changes to stable build